<resources>
    <!--Welcome Page-->
    <string name="petButton">Pet</string>
    <string name="infoButton">Info</string>
    <string name="logButton">Log</string>
    <string name="achButton">Achievements</string>
    <string name="welcomeSign">Hello User!</string>

    <!--  Login  -->
    <string name="app_name">SupplePet</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="edit_email_hint">Enter Email</string>
    <string name="edit_pass_hint">Enter Password</string>
    <string name="edit_pass_conf_hint">Re-enter Password</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--Pet Interaction Page-->
    <string name="progress">Progress</string>
    <string name="feedButton">Feed</string>
    <string name="playButton">Play</string>
    <string name="cleanButton">Clean</string>
    <string name="log_sleep">Sleep</string>
    <string name="log_food">Food</string>
    <string name="log_exercise">Exercise</string>
    <string name="log_supplement_intake">Supplement Intake</string>
    <string name="edit_sleep">How many hours did you sleep today?</string>
    <string name="edit_food">Did you eat appropriately today?</string>
    <string name="edit_exercise">Did you exercise today?</string>
    <string name="edit_intake">Did you take your supplements today?</string>
    <string name="log_title"> User Log </string>
    <string name="update_log">Update Log</string>
    <string name="SupplementLogDialogTitle">Supplement Log has been updated!</string>
    <string name="SupplementLogDialogOk">OK</string>
    <string name="SupplementLogDialogError">Please enter appropriate log data.</string>
    <string name="pet">Pet</string>

    <!-- Supplement Info -->
    <string name="supplement_info_title"> Supplement Info</string>

    <!-- Pet Store -->
    <string name="pet_store_title"> Pet Store </string>
    <string name="coming_soon"> Coming Soon! </string>

    <!-- Achievements -->
    <string name="achievements_title"> Achievements </string>
</resources>