<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SupplementLog">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:translationY="-70dp">

            <Button
                android:id="@+id/btnSleep"
                android:layout_width="268dp"
                android:layout_height="75dp"
                android:backgroundTint="#F9FFFA"
                android:baselineAligned="false"
                android:text="@string/log_sleep"
                android:textColor="#383E3E"
                android:textSize="24sp"
                android:textStyle="bold"
                app:strokeColor="#8DB6C8"
                app:strokeWidth="2dp" />

            <EditText
                android:id="@+id/edit_sleep"
                android:layout_width="268dp"
                android:layout_height="75dp"
                android:background="#8AF9FFFA"
                android:hint="@string/edit_sleep"
                android:textAlignment="center"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnFood"
                android:layout_width="268dp"
                android:layout_height="75dp"
                android:backgroundTint="#F9FFFA"
                android:text="@string/log_food"
                android:textColor="#383E3E"
                android:textSize="24sp"
                android:textStyle="bold"
                app:strokeColor="#8DB6C8"
                app:strokeWidth="2dp" />

            <EditText
                android:id="@+id/edit_food"
                android:layout_width="268dp"
                android:layout_height="75dp"
                android:background="#8AF9FFFA"
                android:hint="@string/edit_food"
                android:textAlignment="center"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnExercise"
                android:layout_width="268dp"
                android:layout_height="75dp"
                android:backgroundTint="#F9FFFA"
                android:text="@string/log_exercise"
                android:textColor="#383E3E"
                android:textSize="24sp"
                android:textStyle="bold"
                app:strokeColor="#8DB6C8"
                app:strokeWidth="2dp" />
            <EditText
                android:id="@+id/edit_exercise"
                android:layout_width="268dp"
                android:layout_height="75dp"
                android:background="#8AF9FFFA"
                android:hint="@string/edit_exercise"
                android:textAlignment="center"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnIntake"
                android:layout_width="268dp"
                android:layout_height="75dp"
                android:backgroundTint="#F9FFFA"
                android:text="@string/log_supplement_intake"
                android:textColor="#383E3E"
                android:textSize="24sp"
                android:textStyle="bold"
                app:strokeColor="#8DB6C8"
                app:strokeWidth="2dp" />
            <EditText
                android:id="@+id/edit_intake"
                android:layout_width="268dp"
                android:layout_height="75dp"
                android:background="#8AF9FFFA"
                android:hint="@string/edit_intake"
                android:textAlignment="center"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnLog"
                android:layout_width="186dp"
                android:layout_height="75dp"
                android:backgroundTint="#69B3D2"
                android:text="@string/update_log"
                android:textColor="#F9FFFA"
                android:textSize="24sp"
                android:textStyle="bold"
                android:translationY="50dp"
                app:strokeColor="#8DB6C8"
                app:strokeWidth="2dp" />

        </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
            <ImageButton
                android:id="@+id/book_button"
                android:layout_width="110dp"
                android:layout_height="100dp"
                android:src="@drawable/book"
                android:background="@color/white">
            </ImageButton>
            <ImageButton
                android:id="@+id/home_button"
                android:layout_width="110dp"
                android:layout_height="100dp"
                android:src="@drawable/home"
                android:background="@color/white">
            </ImageButton>
            <ImageButton
                android:id="@+id/check_button"
                android:layout_width="110dp"
                android:layout_height="100dp"
                android:src="@drawable/check"
                android:background="@color/white">
            </ImageButton>
        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</RelativeLayout>


