<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".PetInteractionActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/progress"
        android:textColor="#89C9EC"
        android:textSize="35sp" />

    <ProgressBar
        android:id="@+id/pet_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:progressDrawable="@drawable/pet_interaction_progress_bar"/>

    <ImageView
        android:id="@+id/pet_dug"
        android:layout_width="279dp"
        android:layout_height="236dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="67dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="65dp"
        android:src="@drawable/dug"
        android:contentDescription="@string/pet"
        app:layout_constraintTop_toBottomOf="@+id/pet_progress_bar" />


    <Button
        android:id="@+id/feed_button"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="395dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="65dp"
        android:backgroundTint="#69B3D2"
        android:fontFamily="sans-serif-black"
        android:text="@string/feedButton"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
        app:layout_constraintTop_toBottomOf="@+id/pet_dug" />

    <Button
        android:id="@+id/pet_button"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="475dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="#69B3D2"
        android:fontFamily="sans-serif-black"
        android:text="@string/petButton"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
        app:layout_constraintTop_toBottomOf="@+id/feed_button" />

    <Button
        android:id="@+id/play_button"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="395dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="#69B3D2"
        android:fontFamily="sans-serif-black"
        android:text="@string/playButton"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
        app:layout_constraintTop_toBottomOf="@+id/pet_dug" />

    <Button
        android:id="@+id/clean_button"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="475dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="#69B3D2"
        android:fontFamily="sans-serif-black"
        android:text="@string/cleanButton"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
        app:layout_constraintTop_toBottomOf="@+id/play_button" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
            <ImageButton
                android:id="@+id/book_button"
                android:layout_width="110dp"
                android:layout_height="100dp"
                android:src="@drawable/book"
                android:background="@color/white">
            </ImageButton>
            <ImageButton
                android:id="@+id/home_button"
                android:layout_width="110dp"
                android:layout_height="100dp"
                android:src="@drawable/home"
                android:background="@color/white">
            </ImageButton>
            <ImageButton
                android:id="@+id/check_button"
                android:layout_width="110dp"
                android:layout_height="100dp"
                android:src="@drawable/check"
                android:background="@color/white">
            </ImageButton>
        </LinearLayout>

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</RelativeLayout>