<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="170dp"
        tools:layout_editor_absoluteY="74dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/supplepet"/>

        <ImageView
            android:id="@+id/emailViewRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/user_name" />

        <EditText
            android:id="@+id/editEmailRegistration"
            android:layout_width="330dp"
            android:layout_height="80dp"
            android:background="@drawable/user_input"
            android:layout_marginBottom="10dp"
            android:inputType="textEmailAddress"
            android:hint="@string/edit_email_hint"
            android:textColorHint="#71C4D5"
            android:gravity="center"
            android:padding="20dp" />

        <ImageView
            android:id="@+id/passwordViewRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/password" />

        <EditText
            android:id="@+id/editPasswordRegistration"
            android:layout_width="330dp"
            android:layout_height="80dp"
            android:background="@drawable/user_input"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"
            android:hint="@string/edit_pass_hint"
            android:textColorHint="#71C4D5"
            android:gravity="center"
            android:padding="20dp" />

        <EditText
            android:id="@+id/editPasswordRegistrationConf"
            android:layout_width="330dp"
            android:layout_height="80dp"
            android:background="@drawable/user_input"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"
            android:hint="@string/edit_pass_conf_hint"
            android:textColorHint="#71C4D5"
            android:gravity="center"
            android:padding="20dp" />

        <Button
            android:id="@+id/btnSubmitRegistration"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/white"
            android:padding="10dp"
            android:enabled="true"
            android:text="@string/action_register"
            android:textColor="#71C4D5"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:background="#71C4D5"/>
            <TextView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:textSize="20dp"
                android:textStyle="italic"
                android:textColor="@color/white"
                android:text="or"
                android:gravity="center"/>
            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:background="#71C4D5"/>
        </LinearLayout>

        <TextView
            android:id="@+id/accountLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/action_sign_in_short"
            android:clickable="true"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </LinearLayout>
</RelativeLayout>